    for people and it's only useful if you have complex setups with
    multiple adapters, etc.

  * Improve logging when subscriptions fail to start

  * More intelligent arbitration amongst all sources when a subscription
    is about to start for a channel. If we cannot descramble or if no
    input is detected, skip to next source.
    Fixes ticket #89 

  * Add option for editing channel icon URL in the channel config tab.

  * Fix support for Irdeto ECM

  * Automatically detect if a connected USB DVB adapter is only Full speed
    (ie 12Mbit/s), and if so, limit so Tvheadend only can stream one service
    at the time from the tuned frequency.

  * Add support for extracting provider in the PMT for SECA/Mediaguard

  * Add support for NIT-other tables. 
    In particular useful for Ziggo DVB-C networks in the Netherlands.

  * Fix various bugs related to RTP encapsulated IPTV

hts-tvheadend (2.7) hts; urgency=low

  * Added support for DVB subtitles. Currently only forwarded over HTSP

  * Add support for reception of RTP encapsulated IPTV

  * Fixed a crash caused by a race condition when starting a subscription

  * Increase maximum packet size for IPTV to 65536 bytes

 -- Andreas Öman <andreas@lonelycoder.com>  Sun, 06 Dec 2009 20:40:41 +0100

hts-tvheadend (2.6) hts; urgency=low

  * Tvheadend's DVB service probe will now make the channel join tags based
    on the service type and DVB provider name.

  * Add support for tuning on ATSC adapters

  * Add support for sattelite beams with circular polarisation

  * If a user changed the XMLTV source for a channel to 'None', tvheadend
    would crash. This is now fixed.

  * Add support for copying a selection of muxes from one DVB adapter to
    another in the web UI.

  * Support for DVB-S2 has been added

  * Default character encoding in DVB is ISO6937, not Latin-1. Ticket #96

  * Add support for DiSEqC 1.1 / 2.1, configured on per-adapter basis.
    Ticket #99
